@@ -2,9 +2,7 @@ package com.InventoryManagementSystem.serviceimpl;
 
 import com.InventoryManagementSystem.entity.Attribute;
 import com.InventoryManagementSystem.entity.ProductType;
-import com.InventoryManagementSystem.entity.ProductTypeAttribute;
 import com.InventoryManagementSystem.repository.AttributeRepository;
-import com.InventoryManagementSystem.repository.ProductTypeAttributeRepository;
 import com.InventoryManagementSystem.repository.ProductTypeRepository;
 import com.InventoryManagementSystem.service.AttributeService;
 
@@ -12,13 +10,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AttributeServiceImpl implements AttributeService {
-
-    @Autowired
-    private ProductTypeAttributeRepository repository;
 
     @Autowired
     private AttributeRepository attributeRepository;
@@ -28,12 +22,12 @@ public class AttributeServiceImpl implements AttributeService {
 
     @Override
     public List<Attribute> getAttributesByProductType(Long productTypeId) {
-
-        List<ProductTypeAttribute> list = repository.findByProductTypeId(productTypeId);
-
-        return list.stream()
-                .map(ProductTypeAttribute::getAttribute)
-                .collect(Collectors.toList());
+        return attributeRepository.findAll()
+                .stream()
+                .filter(attribute ->
+                        attribute.getProductType() != null &&
+                                attribute.getProductType().getId().equals(productTypeId))
+                .toList();
     }
 
     @Override
@@ -45,14 +39,6 @@ public class AttributeServiceImpl implements AttributeService {
 
         attribute.setProductType(productType);
 
-        Attribute savedAttribute = attributeRepository.save(attribute);
-
-        ProductTypeAttribute mapping = new ProductTypeAttribute();
-        mapping.setProductType(productType);
-        mapping.setAttribute(savedAttribute);
-
-        repository.save(mapping);
-
-        return savedAttribute;
+        return attributeRepository.save(attribute);
     }
 }
